--- a/force-app/main/default/classes/LeaveRequestApproveHandler.cls
+++ b/force-app/main/default/classes/LeaveRequestApproveHandler.cls
@@ -51,7 +51,7 @@ public without sharing class LeaveRequestApproveHandler {
                 System.debug('### APP 1');
             	leaveReqStatus.EMS_LM_Status__c = String.isNotBlank(leaveReqStatus.EMS_LM_2nd_Approver__c) ? LeaveRequestConstant.APPROVER_3_WAITING : LeaveRequestConstant.APPROVED;
             	leaveReqStatus.Approver_1_Approved_Comments__c = comments;
-                leaveReqStatus.EMS_LM_Current_Approver__c = String.isNotBlank(leaveReqStatus.EMS_LM_2nd_Approver__c) ? leaveReqStatus.EMS_LM_2nd_Approver__r.LastName + ' ' +  leaveReqStatus.EMS_LM_2nd_Approver__r.FirstName : leaveReqStatus.EMS_LM_Approver__r.LastName + ' ' + leaveReqStatus.EMS_LM_Approver__r.FirstName;
+                //leaveReqStatus.EMS_LM_Current_Approver__c = String.isNotBlank(leaveReqStatus.EMS_LM_2nd_Approver__c) ? leaveReqStatus.EMS_LM_2nd_Approver__r.LastName + ' ' +  leaveReqStatus.EMS_LM_2nd_Approver__r.FirstName : leaveReqStatus.EMS_LM_Approver__r.LastName + ' ' + leaveReqStatus.EMS_LM_Approver__r.FirstName;
                 if(leaveReqStatus.EMS_LM_Status__c == LeaveRequestConstant.APPROVED ) {
                    leaveReqStatus.EMS_LM_Approved_On__c	 = System.today();
                 }
@@ -83,7 +83,7 @@ public without sharing class LeaveRequestApproveHandler {
            System.debug('updatedLeaveReq' +updatedLeaveReqList);
         }
             catch(Exception ex){
-                //LogException.logHandledException(ex);
+                LogException.logHandledException(ex, 'LeaveRequestApproveHandler', 'updateApproveStatusAndComments');
                 System.debug('### Exception ' + ex.getMessage());
             }
     }
@@ -125,7 +125,7 @@ public without sharing class LeaveRequestApproveHandler {
             if (LeaveRequestConstant.LOGGEDIN_USERID == bulkleaveReqApproval.EMS_LM_Approver__c) {
             	bulkleaveReqApproval.EMS_LM_Status__c = String.isNotBlank(bulkleaveReqApproval.EMS_LM_2nd_Approver__c) ? LeaveRequestConstant.APPROVER_3_WAITING : LeaveRequestConstant.APPROVED;
             	bulkleaveReqApproval.Approver_1_Approved_Comments__c = comments;
-                bulkleaveReqApproval.EMS_LM_Current_Approver__c = String.isNotBlank(bulkleaveReqApproval.EMS_LM_2nd_Approver__c) ? bulkleaveReqApproval.EMS_LM_2nd_Approver__r.LastName + ' ' +  bulkleaveReqApproval.EMS_LM_2nd_Approver__r.FirstName : bulkleaveReqApproval.EMS_LM_Approver__r.LastName + ' ' + bulkleaveReqApproval.EMS_LM_Approver__r.FirstName;
+                //bulkleaveReqApproval.EMS_LM_Current_Approver__c = String.isNotBlank(bulkleaveReqApproval.EMS_LM_2nd_Approver__c) ? bulkleaveReqApproval.EMS_LM_2nd_Approver__r.LastName + ' ' +  bulkleaveReqApproval.EMS_LM_2nd_Approver__r.FirstName : bulkleaveReqApproval.EMS_LM_Approver__r.LastName + ' ' + bulkleaveReqApproval.EMS_LM_Approver__r.FirstName;
                 if(bulkleaveReqApproval.EMS_LM_Status__c == LeaveRequestConstant.APPROVED ) {
                    bulkleaveReqApproval.EMS_LM_Approved_On__c	 = System.today();
                 }               
@@ -155,7 +155,7 @@ public without sharing class LeaveRequestApproveHandler {
            System.debug('### bulkupdatedLeaveReqList' +bulkupdatedLeaveReqList);
         }
             catch(Exception ex){
-                //LogException.logHandledException(ex);
+                LogException.logHandledException(ex, 'LeaveRequestApproveHandler', 'bulkLeaveReqApproval');
                 System.debug('### Exception ' + ex.getMessage());
             }
        }
