--- a/force-app/main/default/classes/EMS_LM_LeaveReq_AdminView.cls
+++ b/force-app/main/default/classes/EMS_LM_LeaveReq_AdminView.cls
@@ -36,50 +36,47 @@ public class EMS_LM_LeaveReq_AdminView {
     
     String query = 'SELECT Id, EMS_LM_Leave_Type_Name__c, EMS_LM_Leave_Start_Date__c, EMS_LM_Final_Approver__c, ' + 
         'EMS_LM_Leave_End_Date__c, EMS_LM_Leave_Duration__c, EMS_LM_Reason__c, EMS_LM_Status__c, EMS_LM_Approved_On__c, ' +
-        'EMS_LM_Contact__R.Name, EMS_LM_Current_Approver__c FROM EMS_LM_Leave_History__c';
+        'EMS_LM_Contact__R.Name, EMS_LM_Current_Approver__c FROM EMS_LM_Leave_History__c WHERE CreatedDate != NULL ';
     
     if (startDate != '' && startDate != null) {
         Date startDateValue = Date.valueOf(startDate);
-        query = query + ' WHERE EMS_LM_Leave_Start_Date__c >= :startDateValue';    
-    }
-    if (endDate != '' && endDate != null) {
-        Date endDateValue = Date.valueOf(endDate);
-        if (query.contains('WHERE')) {
-            query = query + ' AND EMS_LM_Leave_End_Date__c <= :endDateValue';  
-        } else {
-            query = query + ' WHERE EMS_LM_Leave_End_Date__c <= :endDateValue';  
-        }   
-    }
-    Set<String> allowedStatusValues = new Set<String>{'Pending', 'Approver 1 pending', 'Approver 2 Pending', 'Approved', 'Rejected', 'Cancelled', 'Auto Approved'};
-    if (!allowedStatusValues.containsAll(statusValues)) {
-        query = query;
-        System.debug('### statusValues null' + statusValues);
-    } else if (query.contains('WHERE')) {
-        query += ' AND EMS_LM_Status__c IN :statusValues';
-        System.debug('## here statusValues ' + query);
-    } else {
-        query += ' WHERE EMS_LM_Status__c IN :statusValues'; 
+        query = query + ' AND EMS_LM_Leave_Start_Date__c >= :startDateValue';    
     }
     
-    Set<String> allowedTypeValues = new Set<String>{'Annual Leave', 'Work from Home', 'Loss of Pay', 'Paternity Leave', 'Bereavement Leave', 'Maternity Leave', 'Compensatory Off'};
-    if (!allowedTypeValues.containsAll(typeValues)) {
-        query = query;
-    } else if (query.contains('WHERE')) {
-        query += ' AND EMS_LM_Leave_Type_Name__c IN :typeValues ';
-        System.debug('## here typeValues ' + query);
-    } else {
-        query += ' WHERE EMS_LM_Leave_Type_Name__c IN :typeValues'; 
+    if (endDate != '' && endDate != null) {
+        Date endDateValue = Date.valueOf(endDate);
+        query = query + ' AND EMS_LM_Leave_End_Date__c <= :endDateValue';            
     }
     
     if (employeeName != null && employeeName != '') {  
         String employeeNameWithWildcards = '%' + employeeName + '%';
-        if (query.contains('WHERE')) {
-            query += ' AND EMS_LM_Contact__R.Name LIKE :employeeNameWithWildcards';
-        }else {
-           	query += ' WHERE EMS_LM_Contact__R.Name LIKE :employeeNameWithWildcards'; 
-        }
+        query += ' AND EMS_LM_Contact__R.Name LIKE :employeeNameWithWildcards';
     }
     
+    Set<String> allowedStatusValues = new Set<String>{'Pending', 'Approver 1 Pending', 'Approver 2 Pending', 'Approved', 'Rejected', 'Cancelled', 'Auto Approved'};
+    if (!allowedStatusValues.containsAll(statusValues)) {
+        query = query;
+        System.debug('### statusValues null' + statusValues);
+    } else if (statusValues != null && statusValues.size() > 0) {
+        query += ' AND EMS_LM_Status__c IN :statusValues';
+        System.debug('## here statusValues ' + query);
+    }else {
+        System.debug(' hello nothing status');
+    }
+
+    Set<String> allowedTypeValues = new Set<String>{'Annual Leave', 'Work From Home', 'Loss of Pay', 'Paternity Leave', 'Bereavement Leave', 'Maternity Leave', 'Compensatory Off'};
+    if (!allowedTypeValues.containsAll(typeValues) ) {
+        System.debug('### hereer');
+        query = query;
+        System.debug('### typeValues null'+ typeValues);
+    }else if (typeValues != null && typeValues.size() > 0){
+        system.debug('heree');
+        query += ' AND EMS_LM_Leave_Type_Name__c IN :typeValues ';
+        System.debug('## here typeValues ' + query);
+    }else {
+        System.debug('### hello nothing types');
+    }
+        
     query = query + ' ORDER BY CreatedDate DESC, EMS_LM_Leave_Type_Name__c ASC ';
     	System.debug('### Final QUERY ' +query );
     	System.debug('### StartDate: ' + startDate);
